fix image overflow

--- a/resources/screen-mobile.less
+++ b/resources/screen-mobile.less
@@ -324,6 +324,7 @@ div.thumb {
 .thumbimage {
 	display: block;
 	margin: 0 auto 0.5em;
+	max-width: 100%;
 }
 
 figure[ typeof~='mw:File/Thumb' ],
